--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div id="footerright">
                 <a href="https://www.instagram.com/_vikaashhh/" target="_blank" rel="noopener noreferrer">Instagram</a>
 
-                <a href="https://https://www.linkedin.com/in/itaintvi/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/itaintvi/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
 
                 <a href="https://www.behance.net/nvsharma" target="_blank" rel="noopener noreferrer">Behance</a>
                 
